--- a/_data/committee.yml
+++ b/_data/committee.yml
@@ -20,7 +20,7 @@ Women's Captain:
 
 Secretary:
   - name: "Essam Rama"
-    image_path: assets/images/headshots/raghul.png
+    image_path: assets/images/headshots/essam.jpg
     email: cuplc-womens-captain@srcf.net
     instagram: "https://www.instagram.com/theparthtopower"
 
