--- a/_data/committee.yml
+++ b/_data/committee.yml
@@ -2,69 +2,69 @@ President:
   - name: "Samin MoghiamiAsl"
     image_path: assets/images/headshots/samin.JPG
     bio: "Samin started powerlifting in ...."
-    email: cuplc-president@srcf.net
+    email: ssm44@cam.ac.uk
     instagram: "https://www.instagram.com/samin_moghimiasl"
 
 Men's Captain:
   - name: "Raghul Parthipan"
     image_path: assets/images/headshots/raghul.png
     bio: "Raghul started powerlifting in ...."
-    email: cuplc-mens-captain@srcf.net
+    email: rp542@cam.ac.uk
     instagram: "https://www.instagram.com/theparthtopower"
 
 Women's Captain:
   - name: "Beatrice Fishwick"
     image_path: assets/images/headshots/raghul.png
-    email: cuplc-womens-captain@srcf.net
-    instagram: "https://www.instagram.com/theparthtopower"
+    email: bcf23@cam.ac.uk
+    instagram: "https://www.instagram.com/beatricefishwick/"
 
 Secretary:
   - name: "Essam Rama"
     image_path: assets/images/headshots/essam.jpg
-    email: cuplc-womens-captain@srcf.net
-    instagram: "https://www.instagram.com/theparthtopower"
+    email: eir24@cam.ac.uk
+    instagram:
 
 Treasurer:
   - name: "Amy Williams"
     image_path: assets/images/headshots/amy.jpg
-    email: cuplc-womens-captain@srcf.net
-    instagram: "https://www.instagram.com/theparthtopower"
+    email: alww2@cam.ac.uk
+    instagram: "https://www.instagram.com/amylwilliams/?"
 
 Webmaster:
   - name: "Bilal Chughtai"
     image_path: /assets/images/headshots/bilal.jpeg
-    email: cuplc-womens-captain@srcf.net
+    email: brchughtaii@gmail.com
     instagram: "https://www.instagram.com/beelalsgymdiaries"
 
 Stash Officer:
   - name: "Stelios Sarantellis"
     image_path: assets/images/headshots/raghul.png
-    email: cuplc-womens-captain@srcf.net
-    instagram: "https://www.instagram.com/theparthtopower"
+    email: ss2561@cam.ac.uk
+    instagram:
 
 Social Media Officer:
   - name: "Laura Kirkpatrick"
     image_path: assets/images/headshots/raghul.png
-    email: cuplc-womens-captain@srcf.net
-    instagram: "https://www.instagram.com/theparthtopower"
+    email:
+    instagram: "https://www.instagram.com/laurasvegains/"
 
 
 Welfare Officer:
   - name: "Morgan Philips"
     image_path: assets/images/headshots/raghul.png
-    email: cuplc-womens-captain@srcf.net
-    instagram: "https://www.instagram.com/theparthtopower"
+    email: mep50@cam.ac.uk
+    instagram: "https://www.instagram.com/morgan_phil_lifts"
   - name: "Molly Duxbury"
     image_path: assets/images/headshots/raghul.png
-    email: cuplc-womens-captain@srcf.net
-    instagram: "https://www.instagram.com/theparthtopower"
+    email: md894@cam.ac.uk
+    instagram: "https://www.instagram.com/dumbsocks_and_deadlifts2"
 
 Social Secretary:
   - name: "Thomas Clark"
     image_path: assets/images/headshots/raghul.png
-    email: cuplc-womens-captain@srcf.net
-    instagram: "https://www.instagram.com/theparthtopower"
+    email: tjc74@cam.ac.uk
+    instagram: ""
   - name: "Yuvraj Agarwal"
     image_path: assets/images/headshots/raghul.png
-    email: cuplc-womens-captain@srcf.net
-    instagram: "https://www.instagram.com/theparthtopower"
+    email: ya312@cam.ac.uk
+    instagram: "https://www.instagram.com/yuvrajtraining"
