--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Bilal Chughtai"
 description              : "The strongest society in Cambridge"
-url                      : https://cuplc.co.uk # TODO the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://cuplc.co.uk # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "bilal-chughtai/cuplc_site" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
