Committee changes and headshot uploads

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,3 +1,9 @@
+Clement Fong:
+  name       :  "Clement Fong"
+  bio         : "CUPLC Webmaster 2022-2023"
+  avatar      : "/assets/images/headshots/clement.jpg"
+  instagram   : "clementfhc"
+
 Bilal Chughtai:
   name       :  "Bilal Chughtai"
   bio         : "CUPLC Webmaster 2021-2022"
@@ -40,3 +46,6 @@ Andrew Hodgeson:
   name        : "Andrew Hodgeson"
   bio         : "President 2015-2016 <br/> Webmaster 2016-2017"
   avatar      : "/assets/images/headshots/hodge.jpg"
+
+
+
