--- a/_data/ex-committees.yml
+++ b/_data/ex-committees.yml
@@ -1,3 +1,37 @@
+
+2021-2022:
+  President:
+    - name: "Samin MoghiamiAsl"
+
+  Men's Captain:
+    - name: "Raghul Parthipan"
+
+  Women's Captain:
+    - name: "Beatrice Fishwick"
+
+  Secretary:
+    - name: "Essam Rama"
+
+  Treasurer:
+    - name: "Amy Williams"
+
+  Webmaster:
+    - name: "Bilal Chughtai"
+
+  Stash Officer:
+    - name: "Stelios Sarantellis"
+
+  Social Media Officer:
+    - name: "Laura Kirkpatrick"
+
+  Welfare Officer:
+    - name: "Morgan Philips"
+    - name: "Molly Duxbury"
+
+  Social Secretary:
+    - name: "Thomas Clark"
+    - name: "Yuvraj Agarwal"
+
 2020-2021:
   President:
     - name: "Remi Rufus-Toye"
