freshers 2022 flyers and sign up link

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,3 +1,9 @@
+Jane Ambler:
+  name       :  "Jane Ambler"
+  bio         : "CUPLC Stash Officer 2022-2023"
+  avatar      : "/assets/images/headshots/jane.jpg"
+  instagram   : "janesgains"
+
 Clement Fong:
   name       :  "Clement Fong"
   bio         : "CUPLC Webmaster 2022-2023"
