--- a/_config.yml
+++ b/_config.yml
@@ -100,7 +100,7 @@ social:
 analytics:
   provider               : "google-gtag" # false (default), "google", "google-universal", "google-gtag", "custom"
   google:
-    tracking_id          : G-7VJHQET3S2
+    tracking_id          : "G-7VJHQET3S2"
     anonymize_ip         : # true, false (default)
 
 
