--- a/_data/committee.yml
+++ b/_data/committee.yml
@@ -31,7 +31,7 @@ Secretary:
 
 Treasurer:
   - name: Natalie Ho
-    image_path: assets/images/logos/lion_logo.png
+    image_path: assets/images/headshots/natalie.jpeg
     email: nhyh2@cam.ac.uk
     instagram: https://www.instagram.com/natalie_ho/
 
@@ -53,7 +53,7 @@ Stash Officer:
 
 Social Media Officer:
   - name: "Santosh Guru"
-    image_path: assets/images/logos/lion_logo.png
+    image_path: assets/images/headshots/santosh.jpg
     email: sg928@cam.ac.uk
     instagram: "https://www.instagram.com/santoshlifts/"
 
