--- a/_data/committee.yml
+++ b/_data/committee.yml
@@ -12,7 +12,7 @@ Co-President:
 
 Men's Captain:
   - name: "Raghul Parthipan"
-    image_path: assets/images/headshots/raghul.png
+    image_path: assets/images/headshots/raghul.jpg
     bio: "Raghul started powerlifting in ...."
     email: rp542@cam.ac.uk
     instagram: "https://www.instagram.com/theparthtopower"
