Add previous committee

--- a/_data/ex-committees.yml
+++ b/_data/ex-committees.yml
@@ -1,4 +1,40 @@
 
+2022-2023:
+  Co-President:
+    - name: "Samin Moghimiasl"
+    - name: "Remi Rufus-Toye"
+
+  Men's Captain:
+    - name: "Raghul Parthipan"
+
+  Women's Captain:
+    - name: "Amy Williams"
+
+  Secretary:
+    - name: "Brandon Teh"
+
+  Treasurer:
+    - name: Natalie Ho
+
+  Webmaster:
+    - name: "Bilal Chughtai"
+    - name: "Clement Fong"
+
+  Stash Officer:
+    - name: "Jane Ambler"
+
+  Social Media Officer:
+    - name: "Santosh Guru"
+
+  Welfare Officer:
+    - name: "Kieran Zheng"
+    - name: "Megan Sermon"
+    - name: "Jane Ambler"
+
+  Social Secretary:
+    - name: "Megan Sermon"
+
+
 2021-2022:
   President:
     - name: "Samin MoghiamiAsl"
